--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
     <script src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
 <body>
-
-    <div id="unity-container" class="unity-desktop">
-        <!-- Yandex.RTB R-A-14687292-1 -->
-        <div id="yandex_rtb_R-A-14687292-1"></div>
-        <script>
-            window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    "blockId": "R-A-14687292-1",
-                    "renderTo": "yandex_rtb_R-A-14687292-1"
-                })
+    <!-- Yandex.RTB R-A-14687292-1 -->
+    <div id="yandex_rtb_R-A-14687292-1">test</div>
+    <script>
+        window.yaContextCb.push(() => {
+            Ya.Context.AdvManager.render({
+                "blockId": "R-A-14687292-1",
+                "renderTo": "yandex_rtb_R-A-14687292-1"
             })
-        </script>
+        })
+    </script>
+    <div id="unity-container" class="unity-desktop">
         <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
         <div id="unity-loading-bar">
             <div id="unity-logo"></div>
