--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Yandex.RTB R-A-14687292-1 -->
-    <div id="yandex_rtb_R-A-14687292-1">test</div>
+    <div id="yandex_rtb_R-A-14687292-1"></div>
     <script>
         window.yaContextCb.push(() => {
             Ya.Context.AdvManager.render({
